crates/toml_edit/tests/snapshots/invalid/local-time/trailing-dot.stderr
TOML parse error at line 1, column 5
  |
1 | t = 12:13:14.
  |     ^^^^^^^^^
invalid time, expected nanosecond
